Clean up coordinator-common and server modules